@@ -531,7 +531,12 @@ sammy.get
                 var custom_parameters = $( '#custom_parameters', form ).val();
                 if( custom_parameters.length )
                 {
-                  array.push( { name : 'custom_parameters', value: custom_parameters } );
+                  var params = custom_parameters.split( '&' );
+                  for( var i in params )
+                  {
+                    var tmp = params[i].split( '=' );
+                    array.push( { name : tmp[0], value: tmp[1] } );
+                  }
                 }
               },
               success : function( response, text_status, xhr )
